--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,18 @@
         "guzzlehttp/guzzle": "~5.0",
         "psr/log": "~1.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0",
+        "satooshi/php-coveralls": "dev-master"
+    },
     "autoload": {
         "psr-4": {
             "Wabel\\CertainAPI\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Wabel\\CertainAPI\\": "test"
         }
     },
     "extra": {
