--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~5.0",
+        "guzzlehttp/guzzle": "5.3.1",
         "psr/log": "~1.0"
     },
     "require-dev": {
